--- a/src/components/Login/LoginForm.scss
+++ b/src/components/Login/LoginForm.scss
@@ -2,8 +2,6 @@
 
 .login {
   padding: 32px 16px;
-  width: 100vw;
-  z-index: 100000;
   background-color: #fff;
 
   @include onDesktop {
