--- a/src/components/SliderMain/SliderMain.scss
+++ b/src/components/SliderMain/SliderMain.scss
@@ -4,6 +4,7 @@
   display: flex;
   position: relative;
   height: auto;
+  z-index: 1;
 
   &__slides {
     width: 100%;
@@ -29,7 +30,7 @@
       width: 100%;
       display: flex;
       justify-content: space-between;
-      z-index: 2;
+      z-index: 1;
       opacity: 0;
       transition: opacity 0.3s ease-in-out;
     }
@@ -77,6 +78,4 @@
       background-color: black;
     }
   }
-
-  
 }
